--- a/styles/pages/index.css
+++ b/styles/pages/index.css
@@ -67,7 +67,7 @@ main > a {
     }
 
     a {
-        padding: var(--spacing-sm) 0;
+        padding: 0;
     }
 }
 
